k8s-specifications/client-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      component: web
  template:
    metadata:
      labels:
        component: web
    spec:
      containers:
        - name: client
          image: ynno/fibonacci-client:latest
          ports:
            - containerPort: 3000
