k8s-specifications/server-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      component: server
  template:
    metadata:
      labels:
        component: server
    spec:
      containers:
        - name: server
          image: ynno/fibonacci-server:latest
          ports:
            - containerPort: 5000
