k8s-specifications/worker-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      component: worker
  template:
    metadata:
      labels:
        component: worker
    spec:
      containers:
        - name: worker
          image: ynno/fibonacci-worker:latest
