k8s-specifications/client-cluster-ip-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-cluster-ip-svc
spec:
  type: ClusterIP
  selector:
    component: web
  ports:
    - port: 3000
      targetPort: 3000
