k8s-specifications/postgres-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-cluster-ip-svc
spec:
  type: ClusterIP
  selector:
    component: postgres
  ports:
    - port: 5432
      targetPort: 5432
